--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,7 @@ ol {
 .result {
   display: flex;
   flex-direction: column;
-  align-self: flex-end;
+  align-self: end;
   padding-top: 78px;
 }
 
@@ -93,7 +93,7 @@ ol {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: start;
   gap: 40px;
 }
 
@@ -225,7 +225,6 @@ ol {
 .search-form__submit-button {
   align-self: end;
   width: 194px;
-  /* width: 100%; */
   height: 34px;
 }
 
